--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <p>
   test
 </p>
-<a href="secondpage.html"> test </a>
+<a href="https://zyanwashere.github.io/secondpage.html"> test </a>
 </html>
