--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <!-- STOP LOOKING AT MY BAD CODE! IM BAD AT THIS OKAY!-->
 <!-- ================================================ -->
 <html>
-<p>
-  test
-</p>
-<a href="h/secondfile.html"> test </a>
-</html>
+  <head>
+    <!-- TELL WEBSITE TO USE CSS FILES + ADD FAVICON + TITLE INFO-->
+    <link rel="stylesheet" type="text/css" href= "zyanwashere.css">
+  </head>
+
+
+  <!-- WEBSITE LOGO / HEADER & NAVBAR -->
+  <div>
+
+    
+  </div>
+
+  <!-- WRITE HERE -->
+  <ul>
+    testing CSS
+  </ul>
