--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </div>
 
   <!-- WRITE HERE -->
+  <h2 id="2023-12"> 2023-12 </h2>
   <ul>
-    testing CSS
+    <li> the website is rough, but live. </li>
   </ul>
