--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <html>
   <head>
     <!-- TELL WEBSITE TO USE CSS FILES + ADD FAVICON + TITLE INFO-->
+    <link rel="shortcut icon" href= "a/website.ico" type="image/zyanwashere-icon">
     <link rel="stylesheet" type="text/css" href= "zyanwashere.css">
+    <title> index </title>
   </head>
 
 
   <!-- WEBSITE LOGO / HEADER & NAVBAR -->
-  <div>
-
-    
+  <div class="header">
+    <a href="https://www.zyanwashere.com"> <img src="a/website logo.png" class="logo" alt="description"> </a>
   </div>
 
   <!-- WRITE HERE -->
