--- a/w/faq.html
+++ b/w/faq.html
@@ -6,7 +6,7 @@
     <!-- TELL WEBSITE TO USE CSS FILES + ADD FAVICON + TITLE INFO-->
   <head>
     <link rel="shortcut icon" href= "a/website.ico" type="image/zyanwashere-icon">
-    <link rel="stylesheet" type="text/css" href= "./zyanwashere.css">
+    <link rel="stylesheet" type="text/css" href= "/zyanwashere.css">
     <title> index </title>
   </head>
 
