update navbar faq redirect test

--- a/converted/website index.html
+++ b/converted/website index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- STOP LOOKING AT MY BAD CODE! IM BAD AT THIS OKAY!-->
-<!-- ================================================ -->
 <html>
 <head>
-  <!-- TELLS WEBSITE TO USE CSS FILES + ADDS FAVICON + TITLE INFO -->
+
+<!-- tells website to use css + adds favicon + title info  -->
+<!-- ===================================================== -->
   <link rel="stylesheet"href = "zyanwashere.css">
   <link rel="shortcut icon" href= "website logo.ico" type="website-icon">
   <title> website index </title>
@@ -13,11 +13,12 @@
   <a href="https://www.zyanwashere.com"> <img src="website logo.png" class="logo" alt="description"> </a>
 </div>
 
-<!-- WEBSITE LOGO / HEADER & NAVIGATION BAR -->
+<!-- navbar options ====================================== -->
+<!-- ===================================================== -->
 <div class="navbar">
     <a href="#">support</a>
     <a href="#">all pages</a>
-    <a href="#">faq</a>
+    <a href="www.zyanwashere.com/converted/faq">faq</a>
 
 </div>
 
