update navbar faq test 2

--- a/converted/2025 log.html
+++ b/converted/2025 log.html
@@ -18,7 +18,7 @@
 <div class="navbar">
     <a href="#">support</a>
     <a href="#">all pages</a>
-    <a href="www.zyanwashere.com/converted/faq">faq</a>
+    <a href="faq">faq</a>
 
 </div>
 
