--- a/converted/faq.html
+++ b/converted/faq.html
@@ -16,7 +16,7 @@
 <!-- navbar options ====================================== -->
 <!-- ===================================================== -->
 <div class="navbar">
-    <a href="#">support</a>
+    <a href="https://www.patreon.com/zyanwashere">patreon</a>
     <a href="#">all pages</a>
     <a href="faq">faq</a>
 
