--- a/converted/i made my first website.html
+++ b/converted/i made my first website.html
@@ -17,7 +17,8 @@
 <!-- ===================================================== -->
 <div class="navbar">
     <a href="https://www.patreon.com/zyanwashere">patreon</a>
-    <a href="#">all pages</a>
+    <a href="index">all pages</a>
+    <a href="#">projects</a>
     <a href="faq">faq</a>
 
 </div>
