css redesign and repushed the site

--- a/faq.html
+++ b/faq.html
@@ -9,19 +9,18 @@
   <title> faq </title>
 </head>
 
-<div class="header">
+<ul class="header">
   <a href="https://www.zyanwashere.com"> <img src="website logo.png" class="logo" alt="description"> </a>
-</div>
+</ul>
 
 <!-- navbar options ====================================== -->
 <!-- ===================================================== -->
-<div class="navbar">
-    <a href="https://www.patreon.com/zyanwashere">patreon</a>
-    <a href="index">all pages</a>
-    <a href="#">projects</a>
-    <a href="faq">faq</a>
-
-</div>
+<ul class = "navbar">
+  <li><a href="https://www.patreon.com/zyanwashere">patreon</a></li>
+  <li><a href="index">all pages</a></li>
+  <li><a href="#">projects</a></li>
+  <li><a href="faq">faq</a></li>
+</ul>
 
 
 
@@ -45,7 +44,7 @@
 <h2>what do you think about licensing or clipping your media?</h2>
 <p>everything's free game. clip, repurpose whatever. go nuts. if you have to know, everything i make technically falls under: <a href="https://creativecommons.org/licenses/by-sa/4.0/">creative commons attribution-sharealike 4.0 international (cc by-sa 4.0)</a></p>
 <h2>how did you make this website?</h2>
-<p>everythings public on github! - i wrote a little article about it here: <a href="i made my first website.html">i made my first website</a></p>
+<p>everythings public on github! - i wrote a little article about it here: <a href="website/i made my first website.html">website/i made my first website</a></p>
 <h2>what software do you use?</h2>
 <p>more like what software don't i use, am i right? here's a list.</p>
 <ul>
