--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<!-- STOP LOOKING AT MY BAD CODE! IM BAD AT THIS OKAY!-->
-<!-- ================================================ -->
 <html>
 <head>
-  <title> hello world </title>
+
+<!-- tells website to use css + adds favicon + title info  -->
+<!-- ===================================================== -->
+  <link rel="stylesheet"href = "zyanwashere.css">
+  <link rel="shortcut icon" href= "website logo.ico" type="website-icon">
+  <title> index </title>
 </head>
 
-<p>
-  just a test, hello world?
-</p>
+<ul class="header">
+  <a href="https://www.zyanwashere.com"> <img src="website logo.png" class="logo" alt="description"> </a>
+</ul>
+
+<!-- navbar options ====================================== -->
+<!-- ===================================================== -->
+<ul class = "navbar">
+  <li><a href="https://www.patreon.com/zyanwashere">patreon</a></li>
+  <li><a href="index">all pages</a></li>
+  <li><a href="#">projects</a></li>
+  <li><a href="faq">faq</a></li>
+</ul>
+
+
+
+  <!-- TYPE BELOW HERE-->
+<p><code>last updated: 2025-10-13</code></p>
+<h2>work in progress</h2>
+<ul>
+<li><a href="2025 log.html">2025 log</a></li>
+</ul>
+<h2>articles</h2>
+<ul>
+<li><a href="is bitrot inevitible.html">is bitrot inevitible</a></li>
+<li><a href="a lazy edit has come to an end.html">a lazy edit has come to an end</a></li>
+<li><a href="what even IS acceptable content.html">what even IS acceptable content</a></li>
+</ul>
+<h2>projects</h2>
+<ul>
+<li><a href="making my own fantasy console part 1 research.html">making my own fantasy console part 1 research</a></li>
+<li><a href="making my own fantasy console part 2 coding.html">making my own fantasy console part 2 coding</a></li>
+<li><a href="i made my first website.html">i made my first website</a></li>
+</ul>
+<h2>archived</h2>
