--- a/index.html
+++ b/index.html
@@ -29,17 +29,13 @@
 <h2>work in progress</h2>
 <ul>
 <li><a href="2025 log.html">2025 log</a></li>
-</ul>
-<h2>articles</h2>
-<ul>
+<li><a href="faq.html">faq</a></li>
+<li><a href="index.html">index</a></li>
 <li><a href="is bitrot inevitible.html">is bitrot inevitible</a></li>
-<li><a href="a lazy edit has come to an end.html">a lazy edit has come to an end</a></li>
-<li><a href="what even IS acceptable content.html">what even IS acceptable content</a></li>
-</ul>
-<h2>projects</h2>
-<ul>
 <li><a href="making my own fantasy console part 1 research.html">making my own fantasy console part 1 research</a></li>
 <li><a href="making my own fantasy console part 2 coding.html">making my own fantasy console part 2 coding</a></li>
-<li><a href="i made my first website.html">i made my first website</a></li>
+<li><a href="what even IS acceptable content.html">what even IS acceptable content</a></li>
+<li><a href="you should start using RSS.html">you should start using RSS</a></li>
 </ul>
+<h2>articles</h2>
 <h2>archived</h2>
