--- a/faq.html
+++ b/faq.html
@@ -47,41 +47,28 @@
 <p>everythings public on github! - i wrote a little article about it here: <a href="website/i made my first website.html">website/i made my first website</a></p>
 <h2>what software do you use?</h2>
 <p>more like what software don't i use, am i right? here's a list.</p>
-<ul>
-<li><a href="https://www.notion.com/">notion</a> - note taking across multiple platforms</li>
-<li>
-<p><a href="https://obsidian.md/">obsidian</a> - note taking locally, writing scripts, and archiving notes</p>
-</li>
-<li>
-<p><a href="https://www.image-line.com/fl-studio/">fl studio</a> - make music</p>
-</li>
-<li><a href="https://www.ableton.com/en/live/">ableton live</a> - music maker</li>
-<li><a href="https://100r.co/site/orca.html">orca</a> - music / instrument manipulator with pseudo code?</li>
-<li><a href="https://www.warmplace.ru/soft/sunvox/">sunvox</a> - music maker / niche DAW</li>
-<li>
-<p><a href="https://obsproject.com/">obs</a> - record audio (and video)</p>
-</li>
-<li>
-<p><a href="https://www.adobe.com/">photoshop</a> - raster image manipulation (i'd avoid adobe if possible)</p>
-</li>
-<li><a href="https://www.adobe.com/">illustrator</a> - vector image manipulation (i'd avoid adobe if possible)</li>
-<li><a href="https://www.blender.org/">blender</a> - 3d modeling, texturing, and animation software</li>
-<li>
-<p><a href="https://krita.org/en/">krita</a> - drawing and partial raster image manipulation</p>
-</li>
-<li>
-<p><a href="https://www.blackmagicdesign.com/products/davinciresolve">davinci resolve</a> - free and used in the industry</p>
-</li>
-<li><a href="https://www.adobe.com/">premiere pro</a> -  yeah. i use it. (i'd avoid adobe if possible)</li>
-<li><a href="https://www.adobe.com/">after effects</a> - higher level of effects used for short sequences (i'd avoid adobe if possible)</li>
-<li>
-<p><a href="https://www.blender.org/">blender</a> - that's right you can edit on this puppy! i use it for comping mostly</p>
-</li>
-<li>
-<p><a href="https://www.unrealengine.com/en-US">unreal engine</a> - game engine</p>
-</li>
-<li><a href="https://unity.com/">unity</a> - game engine</li>
-<li><a href="https://godotengine.org/">godot</a> - newer indie-focused game engine</li>
-<li><a href="https://atom-editor.cc/">atom</a> - lightweight code editor</li>
-<li><a href="https://code.visualstudio.com/">visual studio &amp; visual studio code</a> - code editor</li>
-</ul>
+<p>writing
+- <a href="https://www.notion.com/">notion</a> - note taking across multiple platforms
+- <a href="https://obsidian.md/">obsidian</a> - note taking locally, writing scripts, and archiving notes</p>
+<p>music production
+- <a href="https://www.image-line.com/fl-studio/">fl studio</a> - make music
+- <a href="https://www.ableton.com/en/live/">ableton live</a> - music maker
+- <a href="https://100r.co/site/orca.html">orca</a> - music / instrument manipulator with pseudo code?
+- <a href="https://www.warmplace.ru/soft/sunvox/">sunvox</a> - music maker / niche DAW
+- <a href="https://obsproject.com/">obs</a> - record audio (and video)</p>
+<p>image and 3d
+- <a href="https://www.adobe.com/">photoshop</a> - raster image manipulation (i'd avoid adobe if possible)
+- <a href="https://www.adobe.com/">illustrator</a> - vector image manipulation (i'd avoid adobe if possible)
+- <a href="https://www.blender.org/">blender</a> - 3d modeling, texturing, and animation software
+- <a href="https://krita.org/en/">krita</a> - drawing and partial raster image manipulation</p>
+<p>editing
+- <a href="https://www.blackmagicdesign.com/products/davinciresolve">davinci resolve</a> - free and used in the industry
+- <a href="https://www.adobe.com/">premiere pro</a> -  yeah. i use it. (i'd avoid adobe if possible)
+- <a href="https://www.adobe.com/">after effects</a> - higher level of effects used for short sequences (i'd avoid adobe if possible)
+- <a href="https://www.blender.org/">blender</a> - that's right you can edit on this puppy! i use it for comping mostly</p>
+<p>game design
+- <a href="https://www.unrealengine.com/en-US">unreal engine</a> - game engine
+- <a href="https://unity.com/">unity</a> - game engine
+- <a href="https://godotengine.org/">godot</a> - newer indie-focused game engine
+- <a href="https://atom-editor.cc/">atom</a> - lightweight code editor
+- <a href="https://code.visualstudio.com/">visual studio &amp; visual studio code</a> - code editor</p>
