--- a/faq.html
+++ b/faq.html
@@ -25,11 +25,11 @@
 
 
   <!-- TYPE BELOW HERE-->
-<pre><code>last updated: 2025-07-18
-</code></pre>
-<h1>faq</h1>
+<p><code>last updated: 2025-10-14</code></p>
+<h1>you have questions, i might have the answer:</h1>
+<p><img src ="faq 21-41-51.png" class="thumbnail"></p>
 <h2>do you have any social media?</h2>
-<p>i do, but i am chronically offline. i rarely post on them.</p>
+<p>do you have any social media? kind of? at the moment my social medias exist, but they're not prioritized. if you're curious about them i'll link them below.</p>
 <ul>
 <li><a href="https://www.youtube.com/@ZyanWasHere">main channel</a> i post anything and everything on here. expect anything</li>
 <li><a href="https://www.youtube.com/@infinitethoughs">infinite thoughts</a> one piece (and slight anime focused) channel</li>
@@ -37,38 +37,46 @@
 <li><a href="https://x.com/zyanwashere">twitter</a> i repost the same stuff on these</li>
 <li><a href="https://bsky.app/profile/zyanwashere.bsky.social">bluesky</a> i repost the same stuff on these</li>
 <li><a href="https://www.instagram.com/zyanwashere/">instagram</a> i repost the same stuff on these</li>
-<li>discord. i do not have a discord server. i don't plan to.</li>
+<li><a href="https://discord.com/invite/bpfvT2r9yf">discord</a> is more community based than about me.</li>
 </ul>
 <h2>do you have any merch?</h2>
-<p>i don't have any. maybe some day. if you want to support me, i do have a <a href="https://www.patreon.com/zyanwashere">patreon</a>. do not feel like you have to donate anything - i do this for fun, and for your enjoyment. consider it a tip jar, more than anything.</p>
+<p>not yet! i've thought about a lot though, shirts and jackets. currently my mind is stuck on stickers, i think would be cute. but nothing actually exists as of now. if you want to support me, i do have a <a href="https://www.patreon.com/zyanwashere">patreon</a>. do not feel like you have to donate anything - i do this for fun, and for your enjoyment. consider it a tip jar, more than anything.</p>
 <h2>what do you think about licensing or clipping your media?</h2>
-<p>everything's free game. clip, repurpose whatever. go nuts. if you have to know, everything i make technically falls under: <a href="https://creativecommons.org/licenses/by-sa/4.0/">creative commons attribution-sharealike 4.0 international (cc by-sa 4.0)</a></p>
+<p>personally? i think everything's free game. i don't care what you do. i'd "say" it falls under <a href="https://creativecommons.org/licenses/by-sa/4.0/">creative commons attribution-sharealike 4.0 international (cc by-sa 4.0)</a>, however things like games and media reviews are their own beast, as i don't have the rights to that kind of stuff.</p>
 <h2>how did you make this website?</h2>
-<p>everythings public on github! - i wrote a little article about it here: <a href="website/i made my first website.html">website/i made my first website</a></p>
-<h2>what software do you use?</h2>
-<p>more like what software don't i use, am i right? here's a list.</p>
-<p>writing
-- <a href="https://www.notion.com/">notion</a> - note taking across multiple platforms
-- <a href="https://obsidian.md/">obsidian</a> - note taking locally, writing scripts, and archiving notes</p>
-<p>music production
-- <a href="https://www.image-line.com/fl-studio/">fl studio</a> - make music
-- <a href="https://www.ableton.com/en/live/">ableton live</a> - music maker
-- <a href="https://100r.co/site/orca.html">orca</a> - music / instrument manipulator with pseudo code?
-- <a href="https://www.warmplace.ru/soft/sunvox/">sunvox</a> - music maker / niche DAW
-- <a href="https://obsproject.com/">obs</a> - record audio (and video)</p>
-<p>image and 3d
-- <a href="https://www.adobe.com/">photoshop</a> - raster image manipulation (i'd avoid adobe if possible)
-- <a href="https://www.adobe.com/">illustrator</a> - vector image manipulation (i'd avoid adobe if possible)
-- <a href="https://www.blender.org/">blender</a> - 3d modeling, texturing, and animation software
-- <a href="https://krita.org/en/">krita</a> - drawing and partial raster image manipulation</p>
-<p>editing
-- <a href="https://www.blackmagicdesign.com/products/davinciresolve">davinci resolve</a> - free and used in the industry
-- <a href="https://www.adobe.com/">premiere pro</a> -  yeah. i use it. (i'd avoid adobe if possible)
-- <a href="https://www.adobe.com/">after effects</a> - higher level of effects used for short sequences (i'd avoid adobe if possible)
-- <a href="https://www.blender.org/">blender</a> - that's right you can edit on this puppy! i use it for comping mostly</p>
-<p>game design
-- <a href="https://www.unrealengine.com/en-US">unreal engine</a> - game engine
-- <a href="https://unity.com/">unity</a> - game engine
-- <a href="https://godotengine.org/">godot</a> - newer indie-focused game engine
-- <a href="https://atom-editor.cc/">atom</a> - lightweight code editor
-- <a href="https://code.visualstudio.com/">visual studio &amp; visual studio code</a> - code editor</p>
+<p>everythings public on <a href="https://github.com/ZyanWasHere/website">github</a>! i even wrote a little article about it here: <a href="i made my first website.html">i made my first website</a></p>
+<h2>writing software?</h2>
+<ul>
+<li><a href="https://www.notion.com/">notion</a> note taking across multiple platforms</li>
+<li><a href="https://obsidian.md/">obsidian</a> note taking locally, writing scripts, and archiving notes</li>
+</ul>
+<h2>music production software?</h2>
+<ul>
+<li><a href="https://www.image-line.com/fl-studio/">fl studio</a> make music</li>
+<li><a href="https://www.ableton.com/en/live/">ableton live</a> music maker</li>
+<li><a href="https://100r.co/site/orca.html">orca</a> music / instrument manipulator with pseudo code?</li>
+<li><a href="https://www.warmplace.ru/soft/sunvox/">sunvox</a> music maker / niche DAW</li>
+<li><a href="https://obsproject.com/">obs</a> record audio (and video)</li>
+</ul>
+<h2>image manipulation software?</h2>
+<ul>
+<li><a href="https://www.adobe.com/">photoshop</a> raster image manipulation (i'd avoid adobe if possible)</li>
+<li><a href="https://www.adobe.com/">illustrator</a> vector image manipulation (i'd avoid adobe if possible)</li>
+<li><a href="https://www.blender.org/">blender</a> 3d modeling, texturing, and animation software</li>
+<li><a href="https://krita.org/en/">krita</a> drawing and partial raster image manipulation</li>
+</ul>
+<h2>editing software?</h2>
+<ul>
+<li><a href="https://www.blackmagicdesign.com/products/davinciresolve">davinci resolve</a> free and used in the industry</li>
+<li><a href="https://www.adobe.com/">premiere pro</a> yeah. i use it. (i'd avoid adobe if possible)</li>
+<li><a href="https://www.adobe.com/">after effects</a> vfx  (i'd avoid adobe if possible)</li>
+<li><a href="https://www.blender.org/">blender</a> that's right you can edit on this puppy! i use it for comping mostly</li>
+</ul>
+<h2>game development &amp; coding?</h2>
+<ul>
+<li><a href="https://www.unrealengine.com/en-US">unreal engine</a> game engine</li>
+<li><a href="https://unity.com/">unity</a> game engine</li>
+<li><a href="https://godotengine.org/">godot</a> newer indie-focused game engine</li>
+<li><a href="https://atom-editor.cc/">atom</a> lightweight code editor</li>
+<li><a href="https://code.visualstudio.com/">visual studio &amp; visual studio code</a> code editor</li>
+</ul>
