--- a/all pages.html
+++ b/all pages.html
@@ -6,7 +6,7 @@
 <!-- ===================================================== -->
   <link rel="stylesheet"href = "zyanwashere.css">
   <link rel="shortcut icon" href= "website logo.ico" type="website-icon">
-  <title> index </title>
+  <title> all pages </title>
 </head>
 
 <ul class="header">
@@ -25,17 +25,12 @@
 
 
   <!-- TYPE BELOW HERE-->
-<p><code>last updated: 2025-10-13</code></p>
 <h2>work in progress</h2>
 <ul>
-<li><a href="2025 log.html">2025 log</a></li>
-<li><a href="faq.html">faq</a></li>
 <li><a href="index.html">index</a></li>
-<li><a href="is bitrot inevitible.html">is bitrot inevitible</a></li>
-<li><a href="making my own fantasy console part 1 research.html">making my own fantasy console part 1 research</a></li>
-<li><a href="making my own fantasy console part 2 coding.html">making my own fantasy console part 2 coding</a></li>
-<li><a href="what even IS acceptable content.html">what even IS acceptable content</a></li>
-<li><a href="you should start using RSS.html">you should start using RSS</a></li>
+<li><a href="faq.html">faq</a></li>
 </ul>
-<h2>articles</h2>
 <h2>archived</h2>
+<ul>
+<li><a href="i made my first website.html">i made my first website</a></li>
+</ul>
