--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <h1> heading </h1>
-<p> You probably build websites and think your shit is special. You think your 13 megabyte parallax-ative home page is going to get you some fucking Awwward banner you can glue to the top corner of your site. You think your 40-pound jQuery file and 83 polyfills give IE7 a boner because it finally has box-shadow. Wrong, motherfucker. Let me describe your perfect-ass website: </p>
+<p> testing the text, for some reason no matter what i do it seems to mess up the text and i blame css. testing the text, for some reason no matter what i do it seems to mess up the text and i blame css. testing the text, for some reason no matter what i do it seems to mess up the text and i blame css. </p>
 
 </body>
 </html>
