--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-<h1> heading </h1>
+<h1> under construction </h1>
 <p> testing the text, for some reason no matter what i do it seems to mess up the text and i blame css. testing the text, for some reason no matter what i do it seems to mess up the text and i blame css. testing the text, for some reason no matter what i do it seems to mess up the text and i blame css. </p>
 
 </body>
