--- a/page two.html
+++ b/page two.html
@@ -3,9 +3,9 @@
 <!-- ================================================ -->
 <html>
 <head>
-  <title> hello world </title>
+  <title> page two </title>
 </head>
 
 <p>
-  just a test, hello world?
+  now can we render a 2nd page?
 </p>
