--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href = "zyanwashere.css">
   <link rel ="shortcut icon" href = "website logo.ico" type = "website-icon">
-  <title> homepage</title>
+  <title> index.html</title>
 </head>
 
 
