--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p><code>last updated: 2026-01-13</code></p>
 <h1 id="welcome">welcome</h1>
-<p><img src="D:\create projects\2025-09-19 create website compiler\i\2025-12-22 create zyanwashere dinosaurs.png" alt="2025-12-22 create zyanwashere dinosaurs"></p>
+<p><img src="2025-12-22 create zyanwashere dinosaurs.png" alt="2025-12-22 create zyanwashere dinosaurs"></p>
 <p>currently i am finishing all of my leftover projects from the past year! this website is one of them.</p>
 <h1 id="where-you-can-find-me">where you can find me</h1>
 <ul>
